# usdOpenAssetIOResolver

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/build_openassetio/: action.yml
.github/workflows/: code-quality.yml  test.yml
src/: CMakeLists.txt  resolver.cpp  resolver.h
tests/: test_resolver.py
tests/resources/: plugInfo.json
tests/resources/integration_test_data/assetized_child_ref_non_assetized_grandchild/: bal_library.json  parking_lot.usd
tests/resources/integration_test_data/non_assetized_child_ref_assetized_grandchild/: bal_library.json  parking_lot.usd
tests/resources/integration_test_data/recursive_resolve_to_adjacent_file_path/: bal_library.json
tests/resources/integration_test_data/recursive_resolve_to_search_path/: bal_library.json
tests/resources/integration_test_data/recursive_resolve_to_search_path/search_path_root/floors/: floor1.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_no_search_path/: floor1.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_search_path/search_path_root/cars/: car.usd
tests/resources/integration_test_data/resolver_has_no_effect_with_search_path/search_path_root/floors/: floor1.usd
